<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
    android:id="@+id/activity_goods_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/common_title_2"
        layout="@layout/common_header"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/goodslist_orderby"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/goods_list_sort_bg">

        <!--按销量排序-->
        <RelativeLayout
            android:id="@+id/goodslist_orderby_sales"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/goodlist_orderby_sales_text"
                android:text="@string/sales"
                android:textColor="@color/light"
                android:textSize="@dimen/goods_list_sort_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/goodslist_orderby_grade"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/goodslist_orderby_grade_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/grade"
                android:textColor="@color/light"
                android:textSize="@dimen/goods_list_sort_font_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/goodslist_orderby_price"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <TextView
                android:id="@+id/goodslist_orderby_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/price"
                android:textColor="@color/light"
                android:textSize="@dimen/goods_list_sort_font_size"/>

            <ImageView
                android:id="@+id/goodslist_orderby_price_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5.0dip"
                android:layout_toRightOf="@id/goodslist_orderby_price_text"
                android:contentDescription="价格"
                android:src="@drawable/sort_button_price_none"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/goodslist_orderby_newgoods"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <TextView
                android:id="@+id/goodslist_orderby_newgoods_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/newgoods"
                android:textColor="@color/light"
                android:textSize="@dimen/goods_list_sort_font_size"/>
        </RelativeLayout>
    </LinearLayout>

    <!--下拉刷新控件-->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/goodslist_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--列表控件-->
        <!--focusable能否获取焦点-->
        <!--scrollbars是否显示滚动条-->
        <!--fadingEdge设置拉滚动条时 ，
        边框渐变的放向none(边框颜色不变)horizontal（水平方向颜色变淡）vertical（垂直方向颜色变淡）。 -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/goodslist_recyclerview"
            android:background="@color/white"
            android:fadingEdge="none"
            android:focusable="false"
            android:paddingRight="11dp"
            android:paddingLeft="11dp"
            android:paddingTop="10dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <!--商品列表为空时显示的内容-->

    <TextView
        android:id="@+id/goodslist_nodata"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/goodslist_swipe_refresh"
        android:gravity="center"
        android:text="@string/nodata"
        android:visibility="gone"/>

</LinearLayout>
